--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "angular-prism",
-    "version": "0.1.17",
+    "version": "0.1.18",
     "scripts": {
         "build": "ngc -p tsconfig.json",
         "lint": "tslint --type-check --project tsconfig.json src/**/*.ts",
@@ -17,7 +17,7 @@
         "email": "vaibhavbansal1993@gmail.com"
     },
     "keywords": [
-        "angular"
+        "angular", "angular2", "angular4", "prismjs", "prism", "typescript"
     ],
     "license": "MIT",
     "bugs": {
