add description to npm

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "angular-prism",
-    "version": "0.1.19,
+    "version": "0.1.19",
     "description": "Minimal PrismJS component for code highlighting in Angular 2/4",
     "scripts": {
         "build": "ngc -p tsconfig.json",
